--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,10 @@
 {
-	"id": "autoplay-and-loop",
-	"name": "Autoplay & Loop",
+	"id": "autoplay-and-loop-for-spaced-repetition",
+	"name": "Autoplay & Loop 4 cards",
 	"version": "1.0.1",
-	"description": "Auto reproduces videos/audio inside notes.",
-	"author": "Zerkshop & Wapply",
-	"authorUrl": "https://github.com/Wapply",
-	"fundingUrl": {
-		"Buy Me a Coffee": "https://ko-fi.com/wapply"
-	},
+	"description": "This Obsidian plugin autoplay videos inside space repetition cards.",
+	"author": "Zerkshop & Wapply & pchampio",
+	"authorUrl": "https://github.com/pchampio",
 	"minAppVersion": "1.5.11",
 	"isDesktopOnly": false,
 	"main": "main.js"
